--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -63,6 +63,18 @@
         <servlet-name>helpWrite</servlet-name>
         <url-pattern>/handleWrite</url-pattern>
     </servlet-mapping>
+    <filter>
+        <filter-name>SetCharacterEncodingFilter</filter-name>
+        <filter-class>myutil.SetCharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>SetCharacterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <servlet-mapping>
         <servlet-name>default</servlet-name>
